# bmbc-sim

./: .gitignore  LICENSE  README.md  README_chemical_solver.md  README_fixedpoint_solver.md  dg.py  environment.yaml  evaluate_sala_output.py  lagrange.py  performance_test.py  pyproject.toml  robertson_comparison.py  robertson_grid_vectorized.py  sala_simulation.py  setup.py  test_convergence.py  test_evaluate_output.py  test_new_simulation.py  test_output.py  tmp.py
experiments/: dg_interface.py  dg_iterative.py  lagrange.py
scripts/: Untitled.py  boundaries_cube-Copy1.py  boundaries_cube.py  boundaries_id.py  ca_depletion_model.py  ca_depletion_model_change_ecs_size.py  ca_depletion_model_change_ecs_size_total_substance.py  ca_depletion_model_dynamic-visualization.py  ca_depletion_model_dynamic.py  ca_depletion_model_static.py  channel_geometry.py  channel_geometry_with_occ.py  channel_with_occ.py  chelation_model.py  chelation_simulation.py  chelation_visualization.py  circle_surface_id_example.py  cyt_ecs_geometry.py  demo.py  diffusion_example.py  diffusion_explicit.py  diffusion_implicit_method.py  ecm_geometry.py  ecs_cube.py  electrostatics_simulation.py  electrostatics_visualization.py  evaluator_class.py  hole_cyt.py  hyaluronan_deformation.py  interface_example.py  magnetic_field_example.py  optimization_with_glia.py  optimization_without_glia.py  paszek_deformation.py  pnp_equations_example.py  point_evaluation_example.py  postprocess_simucell3d.py  rusakov_simulation.py  rusakov_simulation_electrostatics.py  sala_simulation.py  (+14 more)
scripts/chelation_vs_electrostatics/: chelation_simulation.py  chelation_visualization.py  electrostatics_simulation.py  simulation.py  visualization.py
scripts/fiore_2025/: simulation.py  simulation_with_electrostatics.py
scripts/integration_tests/: diffusion_only.py  diffusion_reaction.py  multi_species.py  (+1 more)
test/: conftest.py  test_coefficient_fields.py  test_electrostatics.py  test_geometry_description.py  test_mechanics.py  test_multi_compartment_simulation.py  test_multi_region_simulation.py  test_outer_fluxes.py  test_simple_diffusion.py  test_simulation.py  test_simulation_geometry.py  test_single_compartment_simulation.py  test_units.py
(+152 files in other folders)
