[project]
name = "ecsim"
version = "0.2.0"
description = "Extracellular Matrix Simulations"
requires-python = ">= 3.12"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
  {name = "Michael Innerberger", email = "innerbergerm@hhmi.org"},
  {name = "Norma Perez", email = "perezrosasn@janelia.hhmi.org"},
]
dependencies = [
  "astropy",
  "jupyter",
  "matplotlib",
  "networkx",
  "numpy==2.1.3",
  "pytest",
  "pytest-cov",
  "pyvista",
  "scipy",
  "tqdm",
  "xarray",
  "zarr",
  "ngsolve==6.2.2406",
  "webgui_jupyter_widgets",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
