[project]
name = "bmbcsim"
version = "0.1.0"
description = "Biomechanical and Biochemical Simulator (BMBC-Sim)"
requires-python = ">= 3.12,<3.13"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
  {name = "Michael Innerberger", email = "innerbergerm@hhmi.org"},
  {name = "Norma Perez", email = "perezrosasn@janelia.hhmi.org"},
]
dependencies = [
  'astropy',
  'jupyter',
  'matplotlib',
  'networkx',
  'numpy==2.1.3',
  'pytest',
  'pytest-cov',
  'pyvista',
  "scipy",
  "sympy==1.14.0",
  "tqdm",
  "threadpoolctl==3.6.0",
  'xarray',
  "zarr",
  'ngsolve==6.2.2406',
  'webgui_jupyter_widgets',
  'intel-openmp>=2025.1.1; sys_platform == "linux"',
  'mkl>=2025.1.0; sys_platform == "linux"',
  "pymeshfix>=0.17.1",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
